Ajout et correction de EnemyRoom + préparation du système de combat